- Fixed bug #47179 (gzuncompress does not report expcted error)